apps/goatlint/src/snapshots/_fixtures__cli__astro__debugger.astro@goatlint.snap
---
source: apps/goatlint/src/tester.rs
---
########## 
arguments: fixtures/cli/astro/debugger.astro
working directory: 
----------

  ! eslint(no-debugger): `debugger` statement is not allowed
   ,-[fixtures/cli/astro/debugger.astro:2:1]
 1 | ---
 2 | debugger
   : ^^^^^^^^
 3 | ---
   `----
  help: Remove the debugger statement

  ! eslint(no-debugger): `debugger` statement is not allowed
    ,-[fixtures/cli/astro/debugger.astro:11:3]
 10 | <script asdf >
 11 |   debugger
    :   ^^^^^^^^
 12 | </script>
    `----
  help: Remove the debugger statement

  ! eslint(no-debugger): `debugger` statement is not allowed
    ,-[fixtures/cli/astro/debugger.astro:15:3]
 14 | <script asdf>
 15 |   debugger
    :   ^^^^^^^^
 16 | </script>
    `----
  help: Remove the debugger statement

  ! eslint(no-debugger): `debugger` statement is not allowed
    ,-[fixtures/cli/astro/debugger.astro:19:3]
 18 | <script>
 19 |   debugger
    :   ^^^^^^^^
 20 | </script>
    `----
  help: Remove the debugger statement

Found 4 warnings and 0 errors.
Finished in <variable>ms on 1 file with 126 rules using 1 threads.
----------
CLI result: LintSucceeded
----------
